--- a/数据结构题目/暑假算法练习.md
+++ b/数据结构题目/暑假算法练习.md
@@ -600,11 +600,153 @@ class Solution {
 
 
 
+# 五、普通数组
+
+## 十三、最大子数组和
+
+```java
+class Solution {
+    public int maxSubArray(int[] nums) {
+        int res = Integer.MIN_VALUE;
+        int sum = 0;
+
+        for(int i = 0; i < nums.length; i++){
+            sum += nums[i];
+            res = Math.max(sum, res);
+
+          //如果和已经小于零，那么只会让后面的和更小，直接置零
+            if(sum < 0){
+                sum = 0;
+            }
+        }
+
+        return res;
+    }
+}
+```
 
 
 
+## 十四、合并区间
+
+栈
+
+```java
+//类似于下面的方法，没有用左右边界，因为左边界其实用不到，那就把右边界作为栈顶。
+class Solution {
+    public int[][] merge(int[][] intervals) {
+        if(intervals.length == 0){
+            return null;
+        }
+
+        Arrays.sort(intervals, (a,b) -> {return a[0] - b[0];});
+
+        Stack<Integer> stack = new Stack<>();
+
+        for(int i = 0; i < intervals.length; i++){
+            if(!stack.empty() && stack.peek() >= intervals[i][0]){
+                if(stack.peek() < intervals[i][1]){
+                    stack.pop();
+                    stack.push(intervals[i][1]);
+                }
+            } else{
+                stack.push(intervals[i][0]);
+                stack.push(intervals[i][1]);
+            }
+        }
+
+        int size = stack.size() / 2;
+        int[][] res = new int[size][2];
+
+        for(int i = size-1; i >= 0; i--){
+            res[i][1] = stack.pop();
+            res[i][0] = stack.pop();
+        }
+
+        return res;
+    }
+}
+```
 
 
+
+左右边界
+
+```java
+class Solution {
+    public int[][] merge(int[][] intervals) {
+        if(intervals.length == 0){
+            return null;
+        }
+
+        Arrays.sort(intervals, (a,b) -> {return a[0] - b[0];});
+
+        List<int[]> res = new ArrayList<>();
+      //记录左右边界
+        int left = intervals[0][0];
+        int right = intervals[0][1];
+
+        for(int i = 1; i < intervals.length; i++){
+            if(intervals[i][0] <= right){
+              //为什么不在外面的if 用 && 符？有种情况是 被完全包含在里面，即子集，这种不用做处理
+                if(intervals[i][1] >= right){
+                  //可以合并
+                    right = intervals[i][1];
+                }
+            }else{
+              //不可以合并了，添加到结果集，更新左右边界
+                res.add(new int[]{left, right});
+                left = intervals[i][0];
+                right = intervals[i][1];
+            }
+        }
+        res.add(new int[]{left, right});
+
+        return res.toArray(new int[0][2]);
+    }
+}
+```
+
+
+
+这两种方法的前提都是根据原数组的第一个数进行从小到大排序。
+
+
+
+## 十五、轮转数组
+
+题解：
+
+使用三次翻转：
+
+例：{1,2,3,4,5,6,7} ，k = 3
+
+第一次翻转：下标[0,6] ====> {7,6,5,4,3,2,1}
+
+第二次翻转：下标[0,2] ====> {5,6,7,4,3,2,1}
+
+第三次翻转：下标[3,6] ====> {5,6,7,1,2,3,4}
+
+```java
+class Solution {
+    public void rotate(int[] nums, int k) {
+        k %= nums.length;
+        reverse(nums, 0, nums.length - 1);
+        reverse(nums, 0, k - 1);
+        reverse(nums, k, nums.length - 1);
+    }
+
+    public void reverse(int[] nums, int start, int end) {
+        while (start < end) {
+            int temp = nums[start];
+            nums[start] = nums[end];
+            nums[end] = temp;
+            start += 1;
+            end -= 1;
+        }
+    }
+}
+```
 
 
 
