--- a/数据结构题目/暑假算法练习.md
+++ b/数据结构题目/暑假算法练习.md
@@ -600,9 +600,9 @@ class Solution {
 
 
 
-# 五、普通数组
+## 五、普通数组
 
-## 十三、最大子数组和
+### 十三、最大子数组和
 
 ```java
 class Solution {
@@ -627,7 +627,7 @@ class Solution {
 
 
 
-## 十四、合并区间
+### 十四、合并区间
 
 栈
 
@@ -713,7 +713,7 @@ class Solution {
 
 
 
-## 十五、轮转数组
+### 十五、轮转数组
 
 题解：
 
@@ -750,9 +750,581 @@ class Solution {
 
 
 
+### 十六、除自身以外数组的乘积
+
+思路：
+
+1. 先计算前缀积，就是除自身以外，前面的元素的乘积。
+2. 再计算后缀积，除自身以外，后面的元素的乘积。
+3. 将他们对位相乘。
+
+第一位的前缀积为1，最后一位的后缀积为1。
+
+例：[1,2,3,4]
+
+1. 前缀积：[1,1,2,6]。
+2. 后缀积：[24,12,4,1]
+3. 对位相乘：[24,12,8,6]
+
+```java
+class Solution {
+    public int[] productExceptSelf(int[] nums) {
+        int[] result = new int[nums.length];
+
+        int current = 1;
+        //初始化
+        for(int i = 0; i < nums.length; i++){
+            result[i] = 1;
+        }
+
+        //前缀积
+        for(int i = 1; i < nums.length; i++){
+            current *= nums[i - 1];
+            result[i] *= current;
+        }
+
+        current = 1;
+
+        //后缀积
+        for(int i = nums.length - 2; i >= 0; i--){
+            current *= nums[i + 1];
+            result[i] *= current;
+        }
+        
+        return result;
+    }
+}
+```
 
 
 
+### 十七、缺失的第一个正数
+
+```java
+class Solution {
+    public int firstMissingPositive(int[] nums) {
+        int length = nums.length;
+
+        // 将负数和大于数组长度的数变为 n + 1
+        for(int i = 0; i < length; i++){
+            if(nums[i] > length || nums[i] <= 0){
+                nums[i] = length + 1;
+            }
+        }
+
+        // 将出现的正整数标记
+        for(int i = 0; i < length; i++){
+            int num = Math.abs(nums[i]);
+            if(num > length) continue;
+            num--;
+            if(nums[num] > 0){
+                nums[num] = -nums[num];
+            }
+        }
+
+        // 找出第一个正数
+        for(int i = 0; i < length; i++){
+            if(nums[i] > 0){
+                return i + 1;
+            }
+        }
+
+        return length + 1;
+    }
+}
+```
+
+**在标记出现的元素的时候，不会把出现的数组覆盖掉吗？**
+
+在标记出现的元素时，我们使用负数来标记某个索引对应的元素是否出现过，这种方法不会覆盖掉数组的原始值，因为我们只改变了它们的符号，而没有改变它们的绝对值。
 
 
+
+## 六、矩阵
+
+### 十八、矩阵置零
+
+解1：空间复杂度：O(m + n)
+
+```java
+class Solution {
+    public void setZeroes(int[][] matrix) {
+        //记录要设为0的行和列
+        int[] row = new int[matrix.length];
+        int[] column = new int[matrix[0].length];
+
+        for(int i = 0; i < matrix.length; i++){
+            for(int j = 0; j < matrix[0].length; j++){
+                if(matrix[i][j] == 0){
+                    row[i] = 1;
+                    column[j] = 1;
+                }
+            }
+        }
+
+        //设置一行为0
+        for(int i = 0; i < row.length; i++){
+            if(row[i] == 1){
+                setRowZero(matrix, i);
+            }
+        }
+
+        //设置一列为0
+        for(int i = 0; i < column.length; i++){
+            if(column[i] == 1){
+                setColumnZero(matrix, i);
+            }
+        }
+    }
+
+    public void setRowZero(int[][] matrix, int row){
+        for(int i = 0; i < matrix[0].length; i++){
+            matrix[row][i] = 0;
+        }
+    }
+
+    public void setColumnZero(int[][] matrix, int column){
+        for(int i = 0; i < matrix.length; i++){
+            matrix[i][column] = 0;
+        }
+    }
+}
+```
+
+
+
+优化：要在 O(1) 空间复杂度内完成任务，可以利用矩阵的第一行和第一列来存储要置零的行和列的信息。在开始处理矩阵之前，先扫描第一行和第一列，确定是否需要将它们置零。在处理完其余元素后，最后根据标记的结果置零第一行和第一列。
+
+题解：
+
+```java
+public class Solution {
+    public void setZeroes(int[][] matrix) {
+        if (matrix == null || matrix.length == 0 || matrix[0].length == 0) {
+            return;
+        }
+        
+        int m = matrix.length;
+        int n = matrix[0].length;
+        boolean rowZero = false;
+        boolean colZero = false;
+        
+        // Step 1: Determine if the first row or first column needs to be zero
+        for (int i = 0; i < m; i++) {
+            if (matrix[i][0] == 0) {
+                colZero = true;
+                break;
+            }
+        }
+        
+        for (int j = 0; j < n; j++) {
+            if (matrix[0][j] == 0) {
+                rowZero = true;
+                break;
+            }
+        }
+        
+        // Step 2: Use first row and first column as markers
+        for (int i = 1; i < m; i++) {
+            for (int j = 1; j < n; j++) {
+                if (matrix[i][j] == 0) {
+                    matrix[i][0] = 0;
+                    matrix[0][j] = 0;
+                }
+            }
+        }
+        
+        // Step 3: Set matrix elements to zero based on markers
+        for (int i = 1; i < m; i++) {
+            for (int j = 1; j < n; j++) {
+                if (matrix[i][0] == 0 || matrix[0][j] == 0) {
+                    matrix[i][j] = 0;
+                }
+            }
+        }
+        
+        // Step 4: Zero out the first row and column if needed
+        if (rowZero) {
+            for (int j = 0; j < n; j++) {
+                matrix[0][j] = 0;
+            }
+        }
+        
+        if (colZero) {
+            for (int i = 0; i < m; i++) {
+                matrix[i][0] = 0;
+            }
+        }
+    }
+}
+```
+
+
+
+### 十九、螺旋矩阵
+
+```java
+class Solution {
+    public List<Integer> spiralOrder(int[][] matrix) {
+        int direction = 0;
+        int num = matrix.length * matrix[0].length;
+
+        List<Integer> result = new ArrayList<>();
+        int row = 0;
+        int column = 0;
+
+        while(result.size() != num){    //当数组中所有元素都收集到时就结束
+            while(row >= 0 && row < matrix.length && column >= 0 && column < matrix[0].length && matrix[row][column] != 101){
+                switch(direction){
+                    case 0:
+                        //向右
+                        result.add(matrix[row][column]);
+                        matrix[row][column] = 101;
+                        column++;
+                        break;
+                    case 1:
+                        //向下
+                        result.add(matrix[row][column]);
+                        matrix[row][column] = 101;
+                        row++;
+                        break;
+                    case 2:
+                        //向左
+                        result.add(matrix[row][column]);
+                        matrix[row][column] = 101;
+                        column--;
+                        break;
+                    case 3:
+                        //向上
+                        result.add(matrix[row][column]);
+                        matrix[row][column] = 101;
+                        row--;
+                        break;
+                }
+            }
+            //改变方向
+            switch(direction){
+                case 0:
+                    column--;
+                    row++;
+                    direction = 1;
+                    break;
+                case 1:
+                    row--;
+                    column--;
+                    direction = 2;
+                    break;
+                case 2:
+                    column++;
+                    row--;
+                    direction = 3;
+                    break;
+                case 3:
+                    row++;
+                    column++;
+                    direction = 0;
+                    break;
+            }
+        }
+
+        return result;
+    }
+}
+```
+
+
+
+### 二十、旋转图像
+
+```java
+class Solution {
+    public void rotate(int[][] matrix) {
+        int n = matrix.length;
+
+        // 1. 行列转换，第一行变为第一列
+        for (int i = 0; i < n; i++) {
+            for (int j = i; j < n; j++) {
+                int temp = matrix[i][j];
+                matrix[i][j] = matrix[j][i];
+                matrix[j][i] = temp;
+            }
+        }
+
+        // 2. 将每一行的元素前后倒置
+        for (int i = 0; i < n; i++) {
+            for (int j = 0; j < n / 2; j++) {
+                int temp = matrix[i][j];
+                matrix[i][j] = matrix[i][n - 1 - j];
+                matrix[i][n - 1 - j] = temp;
+            }
+        }
+    }
+}
+```
+
+
+
+### 二十一、搜索二维矩阵 II
+
+使用递归
+
+```java
+class Solution {
+    public boolean searchMatrix(int[][] matrix, int target) {
+        return traversal(matrix, target, 0, 0);
+    }
+
+    public boolean traversal(int[][] matrix, int target, int row, int column){
+        if(row < 0 || row >= matrix.length || column < 0 || column >= matrix[0].length || matrix[row][column] == Integer.MAX_VALUE){
+            return false;
+        }
+
+        boolean tag1 = false;
+        boolean tag2 = false;
+
+        if(matrix[row][column] == target){
+            return true;
+        }else if(matrix[row][column] < target){
+            //搜索过的做个标记，防止栈溢出
+            matrix[row][column] = Integer.MAX_VALUE;
+            //右
+            tag1 = traversal(matrix, target, row, column + 1);
+            //下
+            tag2 = traversal(matrix, target, row + 1, column);
+        }else{
+            matrix[row][column] = Integer.MAX_VALUE;
+            //左
+            tag1 = traversal(matrix, target, row, column - 1);
+            //上
+            tag2 = traversal(matrix, target, row - 1, column);
+        }
+
+        return tag1 || tag2;
+    }
+}
+```
+
+题解：
+
+利用矩阵的有序性，可以从矩阵的右上角开始进行搜索：
+
+1. 如果当前元素等于目标值，则返回 true。
+2. 如果当前元素大于目标值，则向左移动一列。
+3. 如果当前元素小于目标值，则向下移动一行。
+
+```java
+public boolean searchMatrix(int[][] matrix, int target) {
+  if (matrix == null || matrix.length == 0 || matrix[0].length == 0) {
+    return false;
+  }
+
+  int rows = matrix.length;
+  int cols = matrix[0].length;
+
+  // 从右上角开始
+  int row = 0;
+  int col = cols - 1;
+
+  while (row < rows && col >= 0) {
+    if (matrix[row][col] == target) {
+      return true;
+    } else if (matrix[row][col] > target) {
+      col--;
+    } else {
+      row++;
+    }
+  }
+
+  return false;
+}
+```
+
+
+
+## 七、链表
+
+### 二十二、相交链表
+
+```java
+/**
+ * Definition for singly-linked list.
+ * public class ListNode {
+ *     int val;
+ *     ListNode next;
+ *     ListNode(int x) {
+ *         val = x;
+ *         next = null;
+ *     }
+ * }
+ */
+public class Solution {
+    public ListNode getIntersectionNode(ListNode headA, ListNode headB) {
+        ListNode node1 = headA;
+        ListNode node2 = headB;
+        int length1 = 0;
+        int length2 = 0;
+        //计算相差的长度
+        while(node1 != null){
+            length1++;
+            node1 = node1.next;
+        }
+        while(node2 != null){
+            length2++;
+            node2 = node2.next;
+        }
+        //去掉相差的长度
+        int diff = Math.abs(length1 - length2);
+        while(length1 != length2){
+            if(length1 > length2){
+                headA = headA.next;
+                length1--;
+            }else{
+                headB = headB.next;
+                length2--;
+            }
+        }
+        //找第一个相交点
+        while(headA != null && headB != null){
+            if(headA == headB){
+                return headA;
+            }else{
+                headA = headA.next;
+                headB = headB.next;
+            }
+        }
+
+        return null;
+    }
+}
+```
+
+
+
+题解：
+
+```java
+public class Solution {
+    public ListNode getIntersectionNode(ListNode headA, ListNode headB) {
+        if (headA == null || headB == null) {
+            return null;
+        }
+
+        ListNode a = headA;
+        ListNode b = headB;
+
+        // 在这里通过两个指针遍历两个链表。如果指针a到达链表末尾，则将其指向链表b的头部；反之亦然
+        // 这样当两个指针相遇时，要么是在交点，要么是两个都到达了末尾(null)
+        // 为了让他们走相同的长度
+        while (a != b) {
+            a = (a == null) ? headB : a.next;
+            b = (b == null) ? headA : b.next;
+        }
+
+        // 返回相交的节点或者null（如果没有相交节点）
+        return a;
+    }
+}
+
+```
+
+
+
+### 二十三、反转链表
+
+```java
+class Solution {
+    public ListNode reverseList(ListNode head) {
+        if(head == null || head.next == null){
+            return head;
+        }
+
+        ListNode r = null;
+        ListNode p = head;
+        ListNode q = head.next;
+
+        while(true){
+            p.next = r;
+            r = p;
+            p = q;
+            if(q == null){
+                return r;
+            }else{
+                q = q.next;
+            }
+        }
+    }
+}
+```
+
+
+
+题解：
+
+```java
+public class Solution {
+    public ListNode reverseList(ListNode head) {
+        ListNode prev = null;
+        ListNode curr = head;
+
+        while (curr != null) {
+            ListNode next = curr.next; // 暂存下一个节点
+            curr.next = prev; // 反转当前节点的指针
+            prev = curr; // 前移指针
+            curr = next; // 前移指针
+        }
+
+        return prev;
+    }
+}
+```
+
+
+
+### 二十四、回文链表
+
+```java
+class Solution {
+    public boolean isPalindrome(ListNode head) {
+        ListNode fast = head.next;
+        ListNode slow = head;
+        //慢指针定位到中间
+        while(fast != null && fast.next != null){
+            fast = fast.next.next;
+            slow = slow.next;
+        }
+        //反转后面链表
+        ListNode last;
+        if(fast == null){
+            last = reverseList(slow.next, slow);
+        }else{
+            last = reverseList(slow.next, null);
+        }
+        //比较是否为回文链表
+        while(last != null && head != null && head != last){
+            if(head.val == last.val){
+                last = last.next;
+                head = head.next;
+            }else{
+                return false;
+            }
+        }
+
+        return true;
+    }
+
+    public ListNode reverseList(ListNode head, ListNode pre) {
+        ListNode prev = pre;
+        ListNode curr = head;
+
+        while (curr != null) {
+            ListNode next = curr.next; // 暂存下一个节点
+            curr.next = prev; // 反转当前节点的指针
+            prev = curr; // 前移指针
+            curr = next; // 前移指针
+        }
+
+        return prev;
+    }
+}
+```
 
