--- a/数据结构题目/暑假算法练习.md
+++ b/数据结构题目/暑假算法练习.md
@@ -1328,3 +1328,172 @@ class Solution {
 }
 ```
 
+
+
+### 二十五、环形链表
+
+快慢指针
+
+```java
+public class Solution {
+    public boolean hasCycle(ListNode head) {
+        if(head == null){
+            return false;
+        }
+
+        ListNode fast = head.next;
+        ListNode slow = head;
+
+        while(fast != null && fast.next != null && slow != null){
+            if(fast == slow){
+                // 相遇就返回 true
+                return true;
+            }
+            fast = fast.next.next;
+            slow = slow.next;
+        }
+
+        // 有一个到达尾部就返回false
+        return false;
+    }
+}
+```
+
+
+
+### 二十六、环形链表 Ⅱ
+
+1. 假设从链表头部到环起点的距离为 `L`，从环起点到相遇点的距离为 `X`，环的长度为 `C`。
+2. 当 `slow` 和 `fast` 相遇时，`slow` 走了 `L + X`，`fast` 走了 `2(L + X)`，且 `fast` 多走的部分必然是环的整数倍，即 `L + X + nC`（其中 n 是环的完整圈数）。
+3. 根据上述关系，`2(L + X) = L + X + nC`，化简得 `L + X = nC`。
+4. 因此，从相遇点开始，`slow` 再走 `L` 步正好到达环的起点。同时从头开始的 `slow` 也走 `L` 步到达环的起点，所以它们会在环的起点相遇。
+
+```java
+public class Solution {
+    public ListNode detectCycle(ListNode head) {
+        if (head == null || head.next == null) {
+            return null;
+        }
+
+        ListNode slow = head;
+        ListNode fast = head;
+
+        // 找到相遇点
+        while (fast != null && fast.next != null) {
+            slow = slow.next;
+            fast = fast.next.next;
+            if (slow == fast) {
+                break;
+            }
+        }
+
+        // 不存在环
+        if (fast == null || fast.next == null) {
+            return null;
+        }
+
+        // 走到环的起始点
+        slow = head;
+        while (slow != fast) {
+            slow = slow.next;
+            fast = fast.next;
+        }
+
+        return slow;
+    }
+}
+```
+
+
+
+### 二十七、合并两个有序链表
+
+```java
+class Solution {
+    public ListNode mergeTwoLists(ListNode list1, ListNode list2) {
+        if(list1 == null){
+            return list2;
+        }else if(list2 == null){
+            return list1;
+        }
+
+        // 合并后的头节点
+        ListNode head;
+        // 记录新链表的当前节点
+        ListNode curr;
+
+        //初始化
+        if(list1.val >= list2.val){
+            head = list2;
+            curr = list2;
+            list2 = list2.next;
+        }else{
+            head = list1;
+            curr = list1;
+            list1 = list1.next;
+        }
+
+        // 如果 list1 的值大于等于 list2 的值，就选 list1 的节点拼接
+        // 反之选 list2 的节点
+        while(list1 != null && list2 != null){
+            if(list1.val >= list2.val){
+                curr.next = list2;
+                curr = curr.next;
+                list2 = list2.next;
+            }else{
+                curr.next = list1;
+                curr = curr.next;
+                list1 = list1.next;
+            }
+        }
+
+        //如果有一个节点到尾了，就把另一个链表的尾部拼到新链表后面
+        if(list1 == null){
+            curr.next = list2;
+        }else if(list2 == null){
+            curr.next = list1;
+        }
+
+        return head;
+    }
+}
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
