--- a/数据结构题目/暑假算法练习.md
+++ b/数据结构题目/暑假算法练习.md
@@ -1461,17 +1461,351 @@ class Solution {
 
 
 
+### 二十八、两数相加
+
+```java
+class Solution {
+    public ListNode addTwoNumbers(ListNode l1, ListNode l2) {
+        if(l1 == null || l2 == null){
+            return l1 == null ? l2 : l1;
+        }
+
+        ListNode head1 = l1;
+        ListNode head2 = l2;
+        // 是否需要进位
+        boolean carried = false;
+
+        // 先拼成一样长的
+        while(l1.next != null || l2.next != null){
+            if(l1.next != null && l2.next == null){
+                l2.next = new ListNode(0);
+            }else if(l1.next == null && l2.next != null){
+                l1.next = new ListNode(0);
+            }
+
+            l1 = l1.next;
+            l2 = l2.next;
+        }
+
+        ListNode pre = null;
+        l1 = head1;
+        l2 = head2;
+
+        // 逐位相加
+        while(l1 != null && l2 != null){
+            int res = l1.val + l2.val;
+            //如果需要进位，结果加一
+            if(carried){
+                res++;
+            }
+            //检查是否需要进位
+            carried = res > 9 ? true : false;
+
+            l1.val = (res % 10);
+
+            pre = l1;
+            l1 = l1.next;
+            l2 = l2.next;
+        }
+
+        //检查是否需要添多一位
+        if(carried){
+            pre.next = new ListNode(1);
+        }
+
+        return head1;
+    }
+}
+```
 
 
 
+### 二十九、删除链表的倒数第 N 个数
+
+1. 创建两个指针，`first` 和 `second`，都指向链表的头部。
+2. 让 `first` 先移动 N 步。
+3. 然后同时移动 `first` 和 `second`，直到 `first` 到达链表的末尾。
+4. 此时，`second` 正好指向倒数第 N 个节点的前一个节点。
+5. 修改 `second` 的 `next` 指针，跳过倒数第 N 个节点，从而实现删除。
+
+```java
+class Solution {
+    public ListNode removeNthFromEnd(ListNode head, int n) {
+        // 创建一个哑结点，方便处理边界情况
+        ListNode dummy = new ListNode(0);
+        dummy.next = head;
+        ListNode first = dummy;
+        ListNode second = dummy;
+        
+        // 让 first 先前进 n+1 步
+        for (int i = 0; i <= n; i++) {
+            first = first.next;
+        }
+        
+        // 让 first 和 second 同时前进，直到 first 到达链表末尾
+        while (first != null) {
+            first = first.next;
+            second = second.next;
+        }
+        
+        // 此时 second 指向倒数第 N 个节点的前一个节点，删除倒数第 N 个节点
+        second.next = second.next.next;
+        
+        // 返回头结点
+        return dummy.next;
+    }
+}
+```
 
 
 
+### 三十、两两交换链表中的节点
+
+```java
+class Solution {
+    public ListNode swapPairs(ListNode head) {
+        if(head == null || head.next == null){
+            return head;
+        }
+
+        ListNode dummy = new ListNode(0);
+        dummy.next = head;
+        ListNode cur = head;
+        ListNode post = head.next;
+        ListNode pre = dummy;
+
+        while(cur != null && post != null){
+            pre.next = post;
+            cur.next = post.next;
+            post.next = cur;
+
+            pre = cur;
+            cur = cur.next;
+            if(cur == null){
+                break;
+            }
+            post = cur.next;
+        }
+
+        return dummy.next;
+    }
+}
+```
 
 
 
+### 三十一、K 个一组翻转链表
+
+```java
+class Solution {
+    public ListNode reverseKGroup(ListNode head, int k) {
+        if(k == 1){
+            return head;
+        }
+
+        ListNode dummy = new ListNode(0, head);
+        ListNode pre = dummy;
+        ListNode cur = head;
+
+        while(true){
+            // 先遍历到k个节点，有 k 个节点再交换
+            for(int i = 0; i < k; i++){
+                if(cur == null){
+                    return dummy.next;
+                }else{
+                    cur = cur.next;
+                }
+            }
+            ListNode post = cur;
+            cur = pre.next;
+            ListNode res = swap(cur, k);
+            pre.next = res;
+            cur.next = post;
+
+            pre = cur;
+            cur = pre.next;
+        }
+    }
+
+    // 倒置 k 个节点的方法
+    // node：第一个节点
+    // 返回：倒置后的第一个节点
+    public ListNode swap(ListNode node, int k){
+        ListNode dummy = new ListNode(0);
+        dummy.next = node;
+        ListNode pre = dummy;
+        ListNode cur = node;
+        ListNode post = cur.next;
+
+        for(int i = 0; i < k; i++){
+            cur.next = pre;
+            pre = cur;
+            cur = post;
+            if(cur == null){
+                break;
+            }
+            post = cur.next;
+        }
+
+        return pre;
+    }
+}
+```
 
 
+
+### 三十二、随机链表的复制
+
+```java
+class Node {
+    int val;
+    Node next;
+    Node random;
+
+    public Node(int val) {
+        this.val = val;
+        this.next = null;
+        this.random = null;
+    }
+}
+
+public class Solution {
+    public Node copyRandomList(Node head) {
+        if (head == null) {
+            return null;
+        }
+
+        // 在原链表的每个节点后面创建一个新节点。新节点的值与原节点相同。
+        Node current = head;
+        while (current != null) {
+            Node newNode = new Node(current.val);
+            newNode.next = current.next;
+            current.next = newNode;
+            current = newNode.next;
+        }
+
+        // 设置新节点的随机指针。新节点的随机指针指向原节点随机指针所指向节点的下一个节点。
+        current = head;
+        while (current != null) {
+            if (current.random != null) {
+                current.next.random = current.random.next;
+            }
+            current = current.next.next;
+        }
+
+        // 将新节点从原链表中分离出来，从而得到一个独立的深拷贝链表。
+        current = head;
+        Node newHead = head.next;
+        Node copyCurrent = newHead;
+        while (current != null) {
+            current.next = current.next.next;
+            if (copyCurrent.next != null) {
+                copyCurrent.next = copyCurrent.next.next;
+            }
+            current = current.next;
+            copyCurrent = copyCurrent.next;
+        }
+
+        return newHead;
+    }
+}
+```
+
+
+
+更好理解版本：
+
+1. **初始化和空检查**：如果输入的链表为空，直接返回 null。
+2. **第一次遍历**：遍历原链表，为每个原节点创建一个新节点，并将它们存储在哈希表中。键是原节点，值是新节点。
+3. **第二次遍历**：再次遍历原链表，设置新节点的 `next` 和 `random` 指针。通过查找哈希表中对应的节点来设置。
+4. **返回结果**：返回哈希表中原链表头节点对应的新节点。
+
+```java
+ public Node copyRandomList(Node head) {
+   if(head == null){
+     return null;
+   }
+   Node cur = head;
+   HashMap<Node,Node> map = new HashMap<>();
+   while(cur!=null){
+     map.put(cur,new Node(cur.val));
+     cur = cur.next;
+   }
+   cur=head;
+   while(cur!=null){
+     map.get(cur).next=map.get(cur.next);
+     map.get(cur).random=map.get(cur.random);
+     cur=cur.next;
+   }
+   return map.get(head);
+ }
+```
+
+
+
+### 三十三、排序链表（困难）
+
+```java
+class ListNode {
+    int val;
+    ListNode next;
+    ListNode(int x) { val = x; }
+}
+
+public class Solution {
+    public ListNode sortList(ListNode head) {
+        // 如果链表为空或只有一个节点，直接返回头节点
+        if (head == null || head.next == null) {
+            return head;
+        }
+
+        // 使用快慢指针找到链表的中间节点
+        ListNode slow = head, fast = head, prev = null;
+        while (fast != null && fast.next != null) {
+            prev = slow;
+            slow = slow.next;
+            fast = fast.next.next;
+        }
+        // 将链表断开成两部分
+        prev.next = null;
+
+        // 递归排序两个子链表
+        ListNode l1 = sortList(head);
+        ListNode l2 = sortList(slow);
+
+        // 合并两个有序链表
+        return merge(l1, l2);
+    }
+
+    // 合并两个有序链表
+    private ListNode merge(ListNode l1, ListNode l2) {
+        ListNode dummy = new ListNode(0);
+        ListNode current = dummy;
+
+        // 比较两个链表的头节点，选择较小的节点链接到结果链表中
+        while (l1 != null && l2 != null) {
+            if (l1.val < l2.val) {
+                current.next = l1;
+                l1 = l1.next;
+            } else {
+                current.next = l2;
+                l2 = l2.next;
+            }
+            current = current.next;
+        }
+
+        // 链接剩余的节点
+        if (l1 != null) {
+            current.next = l1;
+        }
+        if (l2 != null) {
+            current.next = l2;
+        }
+
+        return dummy.next;
+    }
+}
+```
 
 
 
