--- a/数据结构题目/暑假算法练习.md
+++ b/数据结构题目/暑假算法练习.md
@@ -1809,9 +1809,189 @@ public class Solution {
 
 
 
+### 三十四、合并 K 个升序链表
+
+```java
+class Solution {
+    public ListNode mergeKLists(ListNode[] lists) {
+        if(lists.length == 0){
+            return null;
+        }else if(lists.length == 1){
+            return lists[0];
+        }
+
+        return mergeList(lists, 0, lists.length);
+    }
+
+    // 递归合并
+    public ListNode mergeList(ListNode[] lists, int start, int end){
+        if(end - start == 0){
+            return null;
+        }else if(end - start == 1){
+            return lists[start];
+        }else if(end - start == 2){
+            return merge(lists[start], lists[start + 1]);
+        }
+
+        int mid = (end + start) / 2;
+        ListNode l1 = mergeList(lists, start, mid);
+        ListNode l2 = mergeList(lists, mid, end);
+
+        return merge(l1, l2);
+    }
+
+    // 合并两个节点
+    public ListNode merge(ListNode l1, ListNode l2){
+        if(l1 == null && l2 == null){
+            return null;
+        }
+
+        ListNode dummy = new ListNode(0);
+        ListNode cur = dummy;
+
+        while(l1 != null && l2 != null){
+            if(l1.val <= l2.val){
+                cur.next = l1;
+                cur = l1;
+                l1 = l1.next;
+            }else{
+                cur.next = l2;
+                cur = l2;
+                l2 = l2.next;
+            }
+        }
+
+        if(l1 == null && l2 != null){
+            cur.next = l2;
+        }
+        if(l1 != null && l2 == null){
+            cur.next = l1;
+        }
+
+        return dummy.next;
+    }
+}
+```
 
 
 
+### 三十五、LRU 缓存（困难）
+
+双向链表 + Hash 表
+
+```java
+class LRUCache {
+
+    class DLinkedNode {
+        int key;
+        int value;
+        DLinkedNode prev;
+        DLinkedNode next;
+        public DLinkedNode() {}
+        public DLinkedNode(int key, int value) { this.key = key; this.value = value; }
+    }
+
+    private Map<Integer, DLinkedNode> cache = new HashMap<>();
+    private int size;	// 节点数量
+    private int capacity;	// 容量
+    private DLinkedNode head, tail;	// 头节点，尾节点
+
+    public LRUCache(int capacity) {
+        this.size = 0;
+        this.capacity = capacity;
+        // 使用伪头部和伪尾部节点
+        head = new DLinkedNode();
+        tail = new DLinkedNode();
+        head.next = tail;
+        tail.prev = head;
+    }
+
+    public int get(int key) {
+        DLinkedNode node = cache.get(key);
+        if (node == null) {
+            return -1;
+        }
+        // 如果key存在，先通过哈希表定位，再移到头部
+        moveToHead(node);
+        return node.value;
+    }
+
+    public void put(int key, int value) {
+        DLinkedNode node = cache.get(key);
+        if (node == null) {
+            // 如果key不存在，创建一个新节点
+            DLinkedNode newNode = new DLinkedNode(key, value);
+            // 添加进哈希表
+            cache.put(key, newNode);
+            // 添加至双向链表的头部
+            addToHead(newNode);
+            ++size;
+            if (size > capacity) {
+                // 如果超出容量，删除双向链表的尾部节点
+                DLinkedNode tail = removeTail();
+                // 删除哈希表中对应的项
+                cache.remove(tail.key);
+                --size;
+            }
+        } else {
+            // 如果key存在，先通过哈希表定位，再修改value，并移到头部
+            node.value = value;
+            moveToHead(node);
+        }
+    }
+
+    private void addToHead(DLinkedNode node) {
+        node.prev = head;
+        node.next = head.next;
+        head.next.prev = node;
+        head.next = node;
+    }
+
+    private void removeNode(DLinkedNode node) {
+        node.prev.next = node.next;
+        node.next.prev = node.prev;
+    }
+
+    private void moveToHead(DLinkedNode node) {
+        removeNode(node);
+        addToHead(node);
+    }
+
+    private DLinkedNode removeTail() {
+        DLinkedNode res = tail.prev;
+        removeNode(res);
+        return res;
+    }
+}
+```
+
+
+
+## 八、二叉树
+
+### 三十六、中序遍历
+
+```java
+class Solution {
+    List<Integer> result = new ArrayList<>();
+
+    public List<Integer> inorderTraversal(TreeNode root) {
+        traversal(root);
+
+        return result;
+    }
+	// 递归
+    public void traversal(TreeNode root){
+        if(root == null){
+            return;
+        }
+        
+        traversal(root.left);
+        result.add(root.val);
+        traversal(root.right);
+    }
+}
+```
 
 
 
