--- a/数据结构题目/暑假算法练习.md
+++ b/数据结构题目/暑假算法练习.md
@@ -1995,15 +1995,322 @@ class Solution {
 
 
 
+### 三十七、二叉树的最大深度
+
+```java
+class Solution {
+    public int maxDepth(TreeNode root) {
+        return traversal(root, 0);
+    }
+
+    // 中序遍历 + 递归
+    public int traversal(TreeNode root, int depth){
+        if(root == null){
+            return depth;
+        }
+
+        depth++;
+        int left = 0, right = 0;
+        if(root.left != null){
+            left = traversal(root.left, depth);
+        }
+        if(root.right != null){
+            right = traversal(root.right, depth);
+        }
+
+        return Math.max(left, Math.max(right, depth));
+    }
+}
+```
 
 
 
+### 三十八、翻转二叉树
+
+```java
+class Solution {
+    public TreeNode invertTree(TreeNode root) {
+        if(root == null){
+            return null;
+        }
+
+        TreeNode right = invertTree(root.left);
+        TreeNode left = invertTree(root.right);
+
+        root.right = right;
+        root.left = left;
+
+        return root;
+    }
+}
+```
 
 
 
+### 三十九、对称二叉树
+
+```java
+class Solution {
+    public boolean isSymmetric(TreeNode root) {
+        return traversal(root.left, root.right);
+    }
+
+    public boolean traversal(TreeNode p1, TreeNode p2){
+        if(p1 == null && p2 == null){
+            return true;
+        }
+        if(p1 == null || p2 == null){
+            return false;
+        }
+
+        boolean tag1 = (p1.val == p2.val);
+        boolean tag2 = traversal(p1.left, p2.right);
+        boolean tag3 = traversal(p1.right, p2.left);
+
+        return tag1 && tag2 && tag3;
+    }
+}
+```
 
 
 
+### 四十、二叉树的直径
+
+```java
+class Solution {
+    int result = 0;
+    public int diameterOfBinaryTree(TreeNode root) {
+        traversal(root, 0);
+        return result;
+    }
+
+    public int traversal(TreeNode root, int depth){
+        if(root == null){
+            return 0;
+        }
+
+        int left = traversal(root.left, depth);
+        int right = traversal(root.right, depth);
+        // 每一个节点都要计算最长路径
+        // 节点的最长路径 = 左最深长度 + 右最深长度
+        result = Math.max(left + right, result);
+
+        return Math.max(left, Math.max(right, depth)) + 1;
+    }
+}
+```
+
+
+
+### 四十一、二叉树的层序遍历
+
+```java
+class Solution {
+    int cur = 1;
+    int next = 0;
+    Deque<TreeNode> deque = new LinkedList<>();
+
+    public List<List<Integer>> levelOrder(TreeNode root) {
+        List<List<Integer>> res = new ArrayList<>();
+        if(root == null){
+            return res;
+        }
+
+        deque.addLast(root);
+
+        while(deque.size() != 0){
+            List<Integer> list = new ArrayList<>();
+
+            while(cur != 0){
+                TreeNode node = deque.pollFirst();
+                list.add(node.val);
+                if(node.left != null){
+                    deque.addLast(node.left);
+                    next++;
+                }
+                if(node.right != null){
+                    deque.addLast(node.right);
+                    next++;
+                }
+                cur--;
+            }
+
+            res.add(list);
+            cur = next;
+            next = 0;
+        }
+
+        return res;
+    }
+}
+```
+
+
+
+### 四十二、将有序数组转换为二叉搜索树
+
+```java
+class Solution {
+    public TreeNode sortedArrayToBST(int[] nums) {
+        return traversal(nums, 0, nums.length);
+    }
+
+    public TreeNode traversal(int[] nums, int start, int end){
+        if(end - start <= 0){
+            return null;
+        }
+
+        int mid = (start + end) / 2;
+        TreeNode left = traversal(nums, start, mid);
+        TreeNode right = traversal(nums, mid + 1, end);
+
+        TreeNode root = new TreeNode(nums[mid]);
+        root.left = left;
+        root.right = right;
+
+        return root;
+    }
+}
+```
+
+
+
+### 四十三、验证二叉搜索树
+
+```java
+class Solution {
+    TreeNode pre;
+    public boolean isValidBST(TreeNode root) {
+        if(root == null){
+            return true;
+        }
+        //左
+        boolean left = isValidBST(root.left);
+        if(!left){
+            return false;
+        }
+        //中
+        if(pre != null && pre.val >= root.val){
+            return false;
+        }
+        pre = root;
+        // 右
+        boolean right = isValidBST(root.right);
+        return right;
+    }
+}
+```
+
+
+
+### 四十四、二叉搜索树中第K 小的元素
+
+```java
+class Solution {
+    int n = 0;
+
+    public int kthSmallest(TreeNode root, int k) {
+        if(root == null){
+            return -1;
+        }
+        
+        //左
+        int left = kthSmallest(root.left, k);
+        if(left != -1){
+            return left;
+        }
+
+        //中
+        n++;
+        if(k == n){
+            return root.val;
+        }
+
+        //右
+        int right = kthSmallest(root.right, k);
+        return right;
+    }
+}
+```
+
+
+
+参考题解：
+
+```java
+class Solution {
+    public int kthSmallest(TreeNode root, int k) {
+        int leftNodes = countNodes(root.left);
+        if(leftNodes < k - 1){  //答案存在右子树中
+            return kthSmallest(root.right,k - leftNodes - 1);
+        }else if(leftNodes == k - 1){
+            return root.val;
+        }else{
+            return kthSmallest(root.left,k);
+        }
+    }
+    //左神递归套路分析左右子树返回信息只需要节点数，因此无需额外定义数据结构
+    public int countNodes(TreeNode root){
+       //base case返回0
+        if(root == null) return 0;
+       //递归处理左右子树并接收返回值
+        int leftNodes = countNodes(root.left);
+        int rightNodes = countNodes(root.right);
+       //判断分析本层递归返回值的具体值
+        return leftNodes + rightNodes + 1;
+    }
+}
+```
+
+
+
+### 四十五、二叉树的右视图
+
+层序遍历中每一层的最后一个数的结果集
+
+```java
+class Solution {
+    Deque<TreeNode> deque = new LinkedList<>();
+    int num = 1;    // 当前层节点数
+    int next = 0;   // 下一层节点数
+
+    public List<Integer> rightSideView(TreeNode root) {
+        List<Integer> result = new ArrayList<>();
+
+        if(root == null){
+            return result;
+        }
+
+        deque.add(root);
+
+        while(deque.size() != 0){
+            // 遍历每一层，并把下一层元素加入到队列中
+            while(num != 0){
+                TreeNode node = deque.pollFirst();
+
+                if(node.left != null){
+                    deque.addLast(node.left);
+                    next++;
+                }
+                if(node.right != null){
+                    deque.addLast(node.right);
+                    next++;
+                }
+                // 把每一层的最后一个数加入到结果集
+                if(num == 1){
+                    result.add(node.val);
+                }
+
+                num--;
+            }
+            num = next;
+            next = 0;
+        }
+
+        return result;
+    }
+}
+```
 
 
 
